WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305125
[Touch event regions] Slider thumbs and switch controls may be missing touch event regions
https://bugs.webkit.org/show_bug.cgi?id=305125
Summary
[Touch event regions] Slider thumbs and switch controls may be missing touch ...
Lily Spiniolas
Reported
2026-01-08 09:48:20 PST
rdar://167700041
Attachments
Add attachment
proposed patch, testcase, etc.
Lily Spiniolas
Comment 1
2026-01-08 09:56:15 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56265
EWS
Comment 2
2026-01-08 10:29:43 PST
Committed
305297@main
(30763df2eb58): <
https://commits.webkit.org/305297@main
> Reviewed commits have been landed. Closing PR #56265 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug